--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -15,5 +15,6 @@
         <p>I'm the Best</p>
         <p>Emirate</p>
         <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="image">
+        <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">image</a>
     </body>
 </html>
