--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -16,5 +16,6 @@
         <p>Emirate</p>
         <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="image">
         <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">image</a>
+        <p><a href="tweets.html">Check out my Tweets!</a></p>
     </body>
 </html>
