--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -7,6 +7,12 @@
     </head>
 
     <body>
+        <header>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="tweets.html">Tweets</a></li>
+            </ul>
+        </header>
         <h1>Amakiri</h1>
         <p>My Name is Emi Amakiri</p>
         <h2>Emi</h2>
@@ -14,8 +20,21 @@
         <h3>Rightman</h3>
         <p>I'm the Best</p>
         <p>Emirate</p>
+        <main>
+            <article>
+                <!-- Place your existing content for each page here -->
+                <p><blockquote class="twitter-tweet"><p lang="en" dir="ltr">I have just received the heartbreaking news of a ghastly gas explosion that occurred yesterday at the house of one of our Obidient family members, <a href="https://twitter.com/Uptownoflagos?ref_src=twsrc%5Etfw">@Uptownoflagos</a>, leaving three of his brothers with severe third-degree burns. They are currently receiving treatment in one of our…</p>&mdash; Peter Obi (@PeterObi) <a href="https://twitter.com/PeterObi/status/1868985104028123323?ref_src=twsrc%5Etfw">December 17, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <p><a href="index.html">Go back to Homepage</a></p></p>
+            </article>
+            <aside>
+                <p>Placeholder to add comment thread later</p>
+            </aside>
+        </main>
         <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="image">
         <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">image</a>
         <p><a href="tweets.html">Check out my Tweets!</a></p>
+        <footer>
+            <p>Made by Emi Amakiri - <a href="https://example.com" target="_blank">here</a>.</p>
+        </footer>
     </body>
 </html>
