--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,29 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My First Portfolio</title>
-    </head>
-    <body>
-        <header>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="tweets.html">Tweets</a></li>
-            </ul>
-        </header>
-        <main>
-            <article>
-                <!-- Place your existing content for each page here -->
-                <p><blockquote class="twitter-tweet"><p lang="en" dir="ltr">I have just received the heartbreaking news of a ghastly gas explosion that occurred yesterday at the house of one of our Obidient family members, <a href="https://twitter.com/Uptownoflagos?ref_src=twsrc%5Etfw">@Uptownoflagos</a>, leaving three of his brothers with severe third-degree burns. They are currently receiving treatment in one of our…</p>&mdash; Peter Obi (@PeterObi) <a href="https://twitter.com/PeterObi/status/1868985104028123323?ref_src=twsrc%5Etfw">December 17, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                <p><a href="index.html">Go back to Homepage</a></p></p>
-            </article>
-            <aside>
-                <p>Placeholder to add comment thread later</p>
-            </aside>
-        </main>
-        <footer>
-            <p>Made by Emi Amakiri - <a href="https://example.com" target="_blank">here</a>.</p>
-        </footer>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My First Portfolio</title>
+</head>
+<body>
+    <p>E</p>
+    <p>E2</p>
+    <p>E3</p>
+    <p>E4</p>
+    <h1>Level 1</h1>
+    <h2>Level 2</h2>
+    <h3>Level 3</h3>
+
+    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Image">
+    
+    <a href="./tweets.html">tweet</a>
+
+</body>
 </html>
