--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,29 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My First Portfolio</title>
-    </head>
-    <body>
-        <header>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="tweets.html">Tweets</a></li>
-            </ul>
-        </header>
-        <main>
-            <article>
-                <!-- Place your existing content for each page here -->
-                <p><blockquote class="twitter-tweet"><p lang="en" dir="ltr">I have just received the heartbreaking news of a ghastly gas explosion that occurred yesterday at the house of one of our Obidient family members, <a href="https://twitter.com/Uptownoflagos?ref_src=twsrc%5Etfw">@Uptownoflagos</a>, leaving three of his brothers with severe third-degree burns. They are currently receiving treatment in one of our…</p>&mdash; Peter Obi (@PeterObi) <a href="https://twitter.com/PeterObi/status/1868985104028123323?ref_src=twsrc%5Etfw">December 17, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                <p><a href="index.html">Go back to Homepage</a></p></p>
-            </article>
-            <aside>
-                <p>Placeholder to add comment thread later</p>
-            </aside>
-        </main>
-        <footer>
-            <p>Made by Emi Amakiri - <a href="https://example.com" target="_blank">here</a>.</p>
-        </footer>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My First Portfolio</title>
+</head>
+<body>
+    <a href="<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Drop your accounts details below 💰💰<br><br>Crediting first 5000 likes N50k, Crediting all who hasn’t been picked on X before !! 🤩<br><br>₦9m Giveaway. Ademola loooman x Afcon ❤️ <a href="https://t.co/CXyoHYP3te">pic.twitter.com/CXyoHYP3te</a></p>&mdash; Official Blessing (@BlessingGives) <a href="https://twitter.com/BlessingGives/status/1868775802755858670?ref_src=twsrc%5Etfw">December 16, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>">tweet</a>
+
+    <a href="./index.html">home</a>
+</body>
 </html>
