--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -18,5 +18,27 @@
     
     <a href="./tweets.html">tweet</a>
 
+    <header>
+        <ul>
+            <li>
+                <a href="./tweets.html">tweet</a>
+            </li>
+        </ul>
+    </header>
+    
+
+    <main>
+        <article></article>
+
+        <aside>
+            <p>I am Emi Amakiri</p>
+        </aside>
+    </main>
+
+
+    <footer>
+        <p>Made by Emi Amakiri - <a href="www.example.com" target="_blank">here</a></p>
+    </footer>
+
 </body>
 </html>
