--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -20,7 +20,9 @@
     
 
     <main>
-        <article></article>
+        <article>
+            <a href="<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Drop your accounts details below 💰💰<br><br>Crediting first 5000 likes N50k, Crediting all who hasn’t been picked on X before !! 🤩<br><br>₦9m Giveaway. Ademola loooman x Afcon ❤️ <a href="https://t.co/CXyoHYP3te">pic.twitter.com/CXyoHYP3te</a></p>&mdash; Official Blessing (@BlessingGives) <a href="https://twitter.com/BlessingGives/status/1868775802755858670?ref_src=twsrc%5Etfw">December 16, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>">tweet</a>
+        </article>
 
         <aside>
             <p>I am Emi Amakiri</p>
