--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -13,7 +13,7 @@
     <header>
         <ul>
             <li>
-                <a href="./index.html">tweet</a>
+                <a href="./index.html">home</a>
             </li>
         </ul>
     </header>
