--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -19,6 +19,7 @@
     <a href="./tweets.html">tweet</a>
 
     <header>
+        <h1>navigation</h1>
         <ul>
             <li>
                 <a href="./tweets.html">tweet</a>
